force-app/main/default/objects/Programme__c/Programme__c.object-meta.xml
<CustomObject>
    <label>Programme</label>
    <pluralLabel>Programmes</pluralLabel>
    <nameField>
        <label>Programme Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>An NGO intervention programme operating in a specific South African province.</description>
</CustomObject>