force-app/main/default/objects/Programme__c/fields/Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Focus_Area__c</fullName>
    <label>Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Youth Skills Development</fullName><default>false</default><label>Youth Skills Development</label></value>
            <value><fullName>Rural Food Security</fullName><default>false</default><label>Rural Food Security</label></value>
            <value><fullName>Early Childhood Education</fullName><default>false</default><label>Early Childhood Education</label></value>
            <value><fullName>Women Economic Empowerment</fullName><default>false</default><label>Women Economic Empowerment</label></value>
            <value><fullName>Healthcare Access</fullName><default>false</default><label>Healthcare Access</label></value>
            <value><fullName>Housing Support</fullName><default>false</default><label>Housing Support</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>