force-app/main/default/objects/Programme__c/fields/Funding_Goal__c.field-meta.xml
<CustomField>
    <fullName>Funding_Goal__c</fullName>
    <label>Funding Goal</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>