force-app/main/default/objects/Programme__c/fields/Target_Beneficiaries__c.field-meta.xml
<CustomField>
    <fullName>Target_Beneficiaries__c</fullName>
    <label>Target Beneficiaries</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>