force-app/main/default/objects/Programme__c/fields/Total_Donations__c.field-meta.xml
<CustomField>
    <fullName>Total_Donations__c</fullName>
    <label>Total Donations</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>